<resources>
    <string name="appName">MessagesFlash</string>
    <string name="nameCreater">Yeison David Rodriguez Rodriguez</string>
    <string name="textRegisterHome">Regístrate</string>
    <string name="textRegister">Regístrar</string>
    <string name="textRecoveryPassword">Recuperar</string>
    <string name="textBeginHome">Comienza</string>
    <string name="textSignInLogin">Ingresar</string>
    <string name="textRecoverPasswordLogin">Recuperar Tu Contraseña</string>
    <string name="textWelcomeHome">Inicia una nueva aventura con MessagesFlash y descubre una nueva forma de ver el mundo</string>
    <string name="textWelcomeLogin">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="textGoogleLogin">Ingresa con Google</string>
    <string name="textNoCountLogin">¿No tienes cuenta?</string>
    <string name="textYesCountRegister">¿Ya tienes cuenta?</string>
    <string name="textInstructiveRegister">Rellena los siguientes datos</string>
    <string name="textConfirmPasswordRegister">Confirmar contraseña</string>
    <string name="textPasswordRegister">Contraseña</string>
    <string name="textPhoneRegister">Telefono</string>
    <string name="textEmailRegister">Email</string>
    <string name="textLastNameRegister">Apellidos</string>
    <string name="textNameRegister">Nombres</string>
    <string name="textTermsRegister">Acepto los términos y condiciones</string>
    <string name="textInstruvtiveRecoveryPassword">Por favor digitar correo electronico para la recuperación de la contraseña</string>
    <string name="textProfile">Editar</string>
    <string name="textGoBack">Regresar</string>
</resources>